--- a/package.json
+++ b/package.json
@@ -38,5 +38,7 @@
   "language": "go",
   "license": "MIT",
   "name": "go-libp2p-record",
-  "version": "1.0.1"
+  "releaseCmd": "git commit -a -m \"gx publish $VERSION\"",
+  "version": "2.0.0"
 }
+
