--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,16 @@ os:
 language: go
 
 go:
-    - 1.7
+    - 1.9.x
 
 env:
     - GO15VENDOREXPERIMENT=1
 
-install: true
+before_install:
+  - make deps
+
+script:
+  - bash <(curl -s https://raw.githubusercontent.com/ipfs/ci-helpers/master/travis-ci/run-standard-tests.sh)
 
 script:
   - make deps
