Separate the protobuf definitions for stored and transmitted records

--- a/pb/Makefile
+++ b/pb/Makefile
@@ -3,9 +3,14 @@ GO = $(PB:.proto=.pb.go)
 
 all: $(GO)
 
+build-deps-osx:
+	# for protoc
+	brew install protobuf
+	# for the gogofast plugin
+	go get github.com/gogo/protobuf/protoc-gen-gogofast
+
 %.pb.go: %.proto
-		protoc --proto_path=$(GOPATH)/src:. --gogofast_out=. $<
+	protoc --proto_path=$(GOPATH)/src:. --gogofast_out=. $<
 
 clean:
-		rm -f *.pb.go
-		rm -f *.go
+	rm -f *.go
